# DEPair

./: .gitignore  CellTalkDB_human_lr_pair.txt  CellTalkDB_mouse_lr_pair.txt  DEPair.py  LICENSE  README.md  draft.r  draft2.R  pairquant.py  pypi.txt  setup.py
depair/: LICENSE  README.md  eval.py  setup.cfg
depair.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
depair/src/example_pkg_YOUR_USERNAME_HERE.egg-info/: PKG-INFO  SOURCES.txt
deprecated/: deprecated__draft.r
