[metadata]
name = depair
version = 0.0.2
author = Sijie Chen, Qijin Yin, Haoxiang Gao
author_email = chansigit@gmail.com
description = A package calculating cell crosstalks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chansigit/dePair/
project_urls =
    Bug Tracker = https://github.com/chansigit/dePair/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Freeware
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
